Impl #13 - Place Page & Search
# 장소 리스트의 검색, 페이징 기능구현
# 장소명, 폰번호 등 다양한 검색 기능 추가